--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
             # Create a random variable for unique clone directory
             variable=cache$RANDOM
             echo "Cloning repository to: clone-${variable}"
-            git clone https://github.com/SalamLang/Salam-Editor clone-${variable}
+            git clone https://github.com/SalamLang/Salam clone-${variable}
             cd clone-${variable}
             cd src
             
