--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,3 +46,9 @@ jobs:
             cd ../..
             rm -rf clone-${variable}
             echo "Cleanup completed: clone-${variable} removed."
+
+            # Add, commit, and push changes
+            cd ${{ secrets.SERVER_PATH }}
+            git add salam-wa.wasm salam-wa.js
+            git commit -m "Automated commit of WebAssembly build artifacts"
+            git push
