--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,26 @@
   "short_name": "زبان سلام",
   "icons": [
     {
-      "src": "/image/android-chrome-192x192.png",
+      "src": "https://editor.salamlang.ir/image/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/image/android-chrome-512x512.png",
+      "src": "https://editor.salamlang.ir/image/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "theme_color": "#ff5c00",
   "background_color": "#ffffff",
-  "display": "standalone"
+  "display": "standalone",
+  "start_url": "https://editor.salamlang.ir/",
+  "screenshots": [
+    {
+      "src": "https://editor.salamlang.ir/image/screenshot.jpg",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ]
 }
