--- a/package.json
+++ b/package.json
@@ -10,7 +10,41 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.18.4",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/collab": "^6.1.1",
+    "@codemirror/commands": "^6.7.1",
+    "@codemirror/lang-angular": "^0.1.3",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-less": "^6.0.2",
+    "@codemirror/lang-lezer": "^6.0.1",
+    "@codemirror/lang-liquid": "^6.2.2",
+    "@codemirror/lang-markdown": "^6.3.1",
+    "@codemirror/lang-php": "^6.0.1",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/lang-sass": "^6.0.2",
+    "@codemirror/lang-sql": "^6.8.0",
+    "@codemirror/lang-vue": "^0.1.3",
+    "@codemirror/lang-wast": "^6.0.2",
+    "@codemirror/lang-xml": "^6.1.0",
+    "@codemirror/language": "^6.10.7",
+    "@codemirror/lint": "^6.8.4",
+    "@codemirror/merge": "^6.7.5",
+    "@codemirror/search": "^6.5.8",
+    "@codemirror/state": "^6.5.0",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.36.1",
+    "@lezer/common": "^1.2.3",
+    "@lezer/highlight": "^1.2.1",
+    "@lezer/lr": "^1.4.2",
     "codemirror": "^5.65.18",
+    "crelt": "^1.0.6",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
