--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@codemirror/state": "^6.5.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.36.1",
+    "@fireworks-js/react": "^2.10.8",
     "@lezer/common": "^1.2.3",
     "@lezer/highlight": "^1.2.1",
     "@lezer/lr": "^1.4.2",
     "codemirror": "^5.65.18",
     "crelt": "^1.0.6",
+    "fireworks-js": "^2.10.8",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
