--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
-    "react-draggable": "^4.4.6",
+    "react-rnd": "^10.4.14",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
