--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-rnd": "^10.4.14",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
