--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^18.3.1",
     "react-rnd": "^10.4.14",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
