feat(yup): add yup for validations

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-rnd": "^10.4.14",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2",
-    "react-tooltip": "^5.28.0"
+    "react-tooltip": "^5.28.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
