--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-rnd": "^10.4.14",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2",
