--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "codemirror": "^5.65.18",
     "crelt": "^1.0.6",
     "fireworks-js": "^2.10.8",
+    "i18next": "^24.2.2",
     "lodash": "^4.17.21",
     "motion": "^12.0.6",
     "nprogress": "^0.2.0",
@@ -25,6 +26,7 @@
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-i18next": "^15.4.0",
     "react-loading-indicators": "^1.0.0",
     "react-rnd": "^10.4.14",
     "react-router-dom": "^7.0.2",
