--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "crelt": "^1.0.6",
     "fireworks-js": "^2.10.8",
     "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.2",
     "lodash": "^4.17.21",
     "motion": "^12.0.6",
     "nprogress": "^0.2.0",
