--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "fetch": "node ./fetch.js"
   },
   "dependencies": {
     "@fireworks-js/react": "^2.10.8",
